Fix images on mobile

--- a/Support_Your_Locals/wwwroot/css/imagedes.css
+++ b/Support_Your_Locals/wwwroot/css/imagedes.css
@@ -34,7 +34,7 @@
     background-color: #fefefe;
     margin: auto;
     padding: 0;
-    width: 90%;
+    width: 80%;
     max-width: 1200px;
 }
 
